--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Radial Sunburst Graph</title>
     <script src="https://cdn.jsdelivr.net/npm/d3@7.1.1/dist/d3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.2.1/dist/observable_stdlib.min.js"></script>
+    <script type="module" src="radial-sunburst.js"></script>
     <script type="module">
       import {createRadialSunburstChart} from './radial-sunburst.js';
       import {FileAttachment} from '@observablehq/stdlib';
