--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Radial Sunburst Graph</title>
-    <script src="https://cdn.jsdelivr.net/npm/d3@7.1.1/dist/d3.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.2.1/dist/observable_stdlib.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://api.observablehq.com/stdlib@3.2.1/dist/observable_stdlib.min.js"></script>
     <script type="module" src="radial-sunburst.js"></script>
     <script type="module">
       import {createRadialSunburstChart} from './radial-sunburst.js';
